# semantic-search-elasticsearch-openai-langchain

./: README.md  pyproject.toml  requirements.txt  run_elasticsearch.sh
src/: .env-example  app.py  config.py  indexer.py
src/notebooks/: extract_text.ipynb
